--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,7 +28,11 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not ie 11", 
+      "not chrome < 51", 
+      "not safari < 10", 
+      "not android < 51"
     ],
     "development": [
       "last 1 chrome version",
