--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^1.1.3",
+    "d3": "^7.6.1",
     "mapbox-gl": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "topojson": "^3.0.2",
     "worker-loader": "^3.0.8"
   },
   "scripts": {
@@ -29,9 +31,9 @@
       ">0.2%",
       "not dead",
       "not op_mini all",
-      "not ie 11", 
-      "not chrome < 51", 
-      "not safari < 10", 
+      "not ie 11",
+      "not chrome < 51",
+      "not safari < 10",
       "not android < 51"
     ],
     "development": [
